<resources>
    <string name="app_name">Pron\'OL</string>
    <string name="connection">Connection</string>
    <string name="remember_me">Remember me</string>
    <string name="password">Password</string>
    <string name="mail">Email</string>
    <string name="create_my_account">Create my account</string>
    <string name="sign_up">Sign up</string>
    <string name="snack_invalideField">Email or password invalide</string>
    <string name="snack_emptyField">Please fill all fields</string>
    <string name="title_activity_menu">Menu</string>
    <string name="action_settings">Settings</string>
    <string name="Home">Home</string>
    <string name="Outside">Outside</string>
    <string name="Date">Date</string>
    <string name="Hours">Hour</string>
    <string name="valid">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="prono_register">Pronostic register</string>
    <string name="matchList">Match List</string>
    <string name="historical">Historical</string>
    <string name="no_connection">No connection</string>
    <string name="disconnection_msg">Are you sure you want to disconnect ?</string>
    <string name="disconnection">Disconnection</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="no_connection_msg">Please define an internet connection</string>

    <string name="title_activity_tabbed">MainTab</string>
    <string name="leave_msg">Are you sure you want to leave Pron\'OL ?</string>
    <string name="leave">Leave Pron\'OL</string>
    <string name="alreadyPlayed_msg">Impossible to prognosticate this game , it\'s already played !</string>


</resources>
