<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="10">

        <Space
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />

        <RelativeLayout
            android:layout_weight="8"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="10">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2.5"
                    >

                    <TextView
                        android:id="@+id/AppName"
                        android:background="@drawable/shape_pronol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/app_name"
                        android:layout_marginTop="40dp"
                        android:textSize="40sp"/>
                    <Space
                        android:id="@+id/botSpace"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    >

                    <EditText
                        android:id="@+id/edit_pseudo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_above="@+id/edit_password"
                        android:hint="@string/user" />

                    <EditText
                        android:id="@+id/edit_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:hint="@string/password" />

                    <CheckBox
                        android:id="@+id/check_remember"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/edit_password"
                        android:layout_centerHorizontal="true"
                        android:text="@string/remember_me" />

                    <Button
                        android:id="@+id/btn_connect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/check_remember"
                        android:layout_centerHorizontal="true"
                        android:text="@string/connection" />
                </RelativeLayout>

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3.5">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:background="@color/colorLyonOr"
                        android:gravity="center"
                        android:text="@string/create_my_account"
                       />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>