<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="10">

        <Space
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />

        <RelativeLayout
            android:layout_weight="8"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="10">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    >

                    <TextView
                        android:id="@+id/AppName"
                        android:background="@drawable/shape_pronol"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"                        android:gravity="center"
                        android:text="@string/app_name"
                        android:textSize="40sp"/>
                    <Space
                        android:id="@+id/botSpace"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3.5"
                    android:background="@android:color/white"
                    >

                    <EditText
                        android:id="@+id/edit_mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_above="@+id/edit_password"
                        android:hint="@string/mail" />

                    <EditText
                        android:id="@+id/edit_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:hint="@string/password"
                        android:inputType="textPassword"/>



                    <Button
                        android:id="@+id/btn_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/edit_password"
                        android:layout_centerHorizontal="true"
                        android:text="@string/sign_up" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/bottomLayout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2.5">
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>