<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dip"
    android:background="@color/colorTheme">

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Date"
        android:gravity="center"
        android:textSize="12sp"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/tvDom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_below="@id/tvDate"
        android:layout_toLeftOf="@+id/tvScoreDom"
        android:gravity="center"
        android:text="@string/Home"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/tvScoreDom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/tvTiret"
        android:hint="0"
        android:textSize="20sp"
        android:layout_marginRight="5dp"
        android:focusableInTouchMode="true"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/tvTiret"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="-"
        android:textSize="30sp"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/tvScoreExt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:hint="0"
        android:textSize="20sp"
        android:layout_marginLeft="5dp"
        android:focusableInTouchMode="true"
        android:clickable="true"
        android:focusable="true"
        android:layout_toRightOf="@+id/tvTiret"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/tvExt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/tvScoreExt"
        android:layout_toLeftOf="@id/tvPoint"
        android:gravity="center"
        android:text="@string/Outside"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/tvPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:textSize="20sp"
        android:text="+3"
        tools:hint="+0"
        android:textColor="@color/colorPrimaryDark"/>


</RelativeLayout>